--- a/LockBackground.html
+++ b/LockBackground.html
@@ -2,7 +2,8 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<title>misFIT</title>
-		<script src="/js/hide.js"></script>
+		<script src = "js/jquery.min.js"></script>
+		<script type = "text/javascript" src = "js/hide.js"></script>
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
@@ -104,27 +105,6 @@
 					break;
 				default : break;
 			}
-		}
-
-		//start()
-
-		function init() {
-			hide(hour0);
-			hide(hour1);
-			hide(hour2);
-			hide(hour3);
-			hide(hour4);
-			hide(hour5);
-			hide(hour6);
-			hide(hour7);
-			hide(hour8);
-			hide(hour9);
-			hide(hour10);
-			hide(hour11);
-		}
-
-		function start() {
-			showHour();
 		}
 
 	</script>
