--- a/LockBackground.html
+++ b/LockBackground.html
@@ -1,113 +1,15 @@
 <html>
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<meta http-equiv = "Content-Type" content = "text/html; charset=UTF-8" />
+		<meta author = "Jaqobs" />
 		<title>misFIT</title>
-		<script src = "js/jquery.min.js"></script>
-		<script type = "text/javascript" src = "js/hide.js"></script>
-		<link rel="stylesheet" href="style.css">
+
+		<script type = "text/javascript" src = "js/jquery.min.js"></script>
+		<script type = "text/javascript" src = "js/clock.js"></script>
+		<link rel = "stylesheet" href= "css/style.css">
+		
 	</head>
 	<body>
-		<script type="text/javascript">
-		//opacity of clock elements to 0.1
-		var opacity
-		function hide(Element) {
-			Element.style.opacity = 0.1;
-		}
-
-		//get time
-		var h; //hours
-		var m; //minutes
-		function getTime() {
-			var currentTime = new Date();
-			h = currentTime.getHours() % 12;
-			m = Math.round(currentTime.getMinutes() / 5);
-		}
-
-		//show hour
-		function showHour () {
-			getTime();
-			switch (h) {
-				case 0 :
-					setTimeout(function() {hour0.style.opacity = 1.0}, 500);
-					break;
-				case 1 :
-					setTimeout(function() {hour1.style.opacity = 1.0}, 500);
-					break;
-				case 2 :
-					setTimeout(function() {hour2.style.opacity = 1.0}, 500);
-					break;
-				case 3 :
-					setTimeout(function() {hour3.style.opacity = 1.0}, 500);
-					break;
-				case 4 :
-					setTimeout(function() {hour4.style.opacity = 1.0}, 500);
-					break;
-				case 5 :
-					setTimeout(function() {hour5.style.opacity = 1.0}, 500);
-					break;
-				case 6 :
-					setTimeout(function() {hour6.style.opacity = 1.0}, 500);
-					break;
-				case 7 :
-					setTimeout(function() {hour7.style.opacity = 1.0}, 500);
-					break;
-				case 8 :
-					setTimeout(function() {hour8.style.opacity = 1.0}, 500);
-					break;
-				case 9 :
-					setTimeout(function() {hour9.style.opacity = 1.0}, 500);
-					break;
-				case 10 :
-					setTimeout(function() {hour10.style.opacity = 1.0}, 500);
-					break;
-				case 11 :
-					setTimeout(function() {hour11.style.opacity = 1.0}, 500);
-					break;
-				default : break;
-			}
-
-			switch (m) {
-				case 0 :
-					setTimeout(function() {hour0.style.opacity = 1.0}, 1500);
-					break;
-				case 1 :
-					setTimeout(function() {hour1.style.opacity = 1.0}, 1500);
-					break;
-				case 2 :
-					setTimeout(function() {hour2.style.opacity = 1.0}, 1500);
-					break;
-				case 3 :
-					setTimeout(function() {hour3.style.opacity = 1.0}, 1500);
-					break;
-				case 4 :
-					setTimeout(function() {hour4.style.opacity = 1.0}, 1500);
-					break;
-				case 5 :
-					setTimeout(function() {hour5.style.opacity = 1.0}, 1500);
-					break;
-				case 6 :
-					setTimeout(function() {hour6.style.opacity = 1.0}, 1500);
-					break;
-				case 7 :
-					setTimeout(function() {hour7.style.opacity = 1.0}, 1500);
-					break;
-				case 8 :
-					setTimeout(function() {hour8.style.opacity = 1.0}, 1500);
-					break;
-				case 9 :
-					setTimeout(function() {hour9.style.opacity = 1.0}, 1500);
-					break;
-				case 10 :
-					setTimeout(function() {hour10.style.opacity = 1.0}, 1500);
-					break;
-				case 11 :
-					setTimeout(function() {hour11.style.opacity = 1.0}, 1500);
-					break;
-				default : break;
-			}
-		}
-
-	</script>
 		<div id="clock">
 			<div id="hour0">
 			</div>
@@ -138,9 +40,5 @@
 			<div id="stunde">
 			</div>
 		</div>
-		<script type="text/javascript">
-			window.onLoad = init();
-			window.onLoad = start();
-		</script>
 	</body>
 </html>
