--- a/LockBackground.html
+++ b/LockBackground.html
@@ -4,8 +4,9 @@
 		<meta author = "Jaqobs" />
 		<title>misFIT</title>
 
-		<script type = "text/javascript" src = "js/jquery.min.js"></script>
+		<script type = "text/javascript" src = "js/jquery-2.1.1.min.js"></script>
 		<script type = "text/javascript" src = "js/clock.js"></script>
+		<script type = "text/javascript" src = "js/battery.js"></script>
 		<link rel = "stylesheet" href= "css/style.css">
 		
 	</head>
@@ -37,6 +38,8 @@
 			<div id="minutes">
 			</div>
 			<div id="stunde">
+			</div>
+			<div id="battery">
 			</div>
 	</body>
 </html>
