--- a/LockBackground.html
+++ b/LockBackground.html
@@ -6,7 +6,7 @@
 		<script type = "text/javascript" src = "js/jquery-2.1.1.min.js"></script>
 		<script type = "text/javascript" src = "js/clock.js"></script>
 		<script type = "text/javascript" src = "js/timer.js"></script>
-		<!--<script type = "text/javascript" src = "js/battery.js"></script>-->
+		<script type = "text/javascript" src = "js/battery.js"></script>
 		<link rel = "stylesheet" href= "css/style.css">
 	</head>
 	<body>
