--- a/LockBackground.html
+++ b/LockBackground.html
@@ -34,6 +34,30 @@
 		</div>
 		<div id="hour11">
 		</div>
+		<div id="minute0">
+		</div>
+		<div id="minute1">
+		</div>
+		<div id="minute2">
+		</div>
+		<div id="minute3">
+		</div>
+		<div id="minute4">
+		</div>
+		<div id="minute5">
+		</div>
+		<div id="minute6">
+		</div>
+		<div id="minute7">
+		</div>
+		<div id="minute8">
+		</div>
+		<div id="minute9">
+		</div>
+		<div id="minute10">
+		</div>
+		<div id="minute11">
+		</div>
 		<div id="minutes">
 		</div>
 		<div id="stunde">
